# Long-Shadows

./: LICENSE.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sdsmdg/harjot/longshadowsandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sdsmdg/harjot/longshadowsandroid/: CustomLongShadowsView.java  CustomView.java  MainActivity.java
app/src/main/res/drawable/: apple.xml  ic_bulb.xml  ic_chrome.xml  ic_circle.xml  ic_cloud_lightning.xml  ic_cloud_rain.xml  ic_cloud_snow.xml  ic_facebook_2.xml  ic_google.xml  ic_google_icon.xml  ic_google_icon_colored.xml  ic_heart.xml  ic_rocket.xml  ic_slack.xml  ic_slack_1.xml  ic_twitter.xml  rectangular_white_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sdsmdg/harjot/longshadowsandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
longshadows/: CMakeLists.txt  build.gradle
longshadows/src/androidTest/java/com/sdsmdg/harjot/longshadows/: ExampleInstrumentedTest.java
longshadows/src/main/: AndroidManifest.xml
longshadows/src/main/cpp/: native-lib.cpp
longshadows/src/main/java/com/sdsmdg/harjot/longshadows/: Constants.java  LongShadowsFrameLayoutWrapper.java  LongShadowsImageView.java  LongShadowsTextView.java  LongShadowsView.java  LongShadowsWrapper.java
longshadows/src/main/java/com/sdsmdg/harjot/longshadows/models/: Contour.java  Point2D.java  ShadowBitmap.java  ShadowPath.java
longshadows/src/main/java/com/sdsmdg/harjot/longshadows/shadowutils/: LongShadowsGenerator.java  Utils.java
longshadows/src/main/res/values/: attrs.xml  strings.xml
longshadows/src/test/java/com/sdsmdg/harjot/longshadows/: ExampleUnitTest.java
